--- a/islamic_frontend/public/index.html
+++ b/islamic_frontend/public/index.html
@@ -16,6 +16,7 @@
     -->
     <link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
     <link rel='preconnect' href='https://fonts.gstatic.com/' crossorigin />
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel='stylesheet' id='bootstrap-css' href='%PUBLIC_URL%/css/bootstrapd1c0.css?ver=6.7.2' type='text/css' media='all' />
     <link rel='stylesheet' id='webfonts-css' href='%PUBLIC_URL%/fonts/webfontsd1c0.css?ver=6.7.2' type='text/css' media='all' />
     <link rel='stylesheet' id='taqwa-default-css' href='%PUBLIC_URL%/css/styled1c0.css?ver=6.7.2' type='text/css' media='all' />
