--- a/islamic_frontend/public/index.html
+++ b/islamic_frontend/public/index.html
@@ -132,6 +132,9 @@
   .count p{
     text-align: left;
   }
+  .tq-feat-pagination{
+    display: none !important;
+  }
   .btn-subscribe{
     color: #004636;
       background-color: #db9e30;
